soldout 페이지 추가 / bidding 페이지 수정 / artist가 소장품 등록하면 artist표시 되던거 수정 / 판매종료 옵션 수정

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -448,10 +448,10 @@ function onload(sort, type){
 				
 				html += '</div>';
 				
-				if(result[i].authSq == 2){
+				if(result[i].workTpyCd == "WORK"){
  				html += '<div class="artist active"><span>Artist</span></div>';
      			}
-     			if(result[i].authSq == 1){
+     			if(result[i].workTpyCd == "COLL"){
      				html += '<div class="artist"><span>Artist</span></div>';
      			}
 				
@@ -498,10 +498,10 @@ function onload(sort, type){
 				
 				html += '</div>';
 				
-				if(result[i].authSq == 2){
+				if(result[i].workTpyCd == "WORK"){
  				html += '<div class="artist active" onclick="dealDetail('+ result[i].workSq +')"><span>Artist</span></div>';
  				}
- 				if(result[i].authSq == 1){
+ 				if(result[i].workTpyCd == "COLL"){
  				html += '<div class="artist"><span>Artist</span></div>';
  				}
  				
@@ -543,10 +543,10 @@ function onload(sort, type){
 				html += '</div>'
 				html += '</div>';
 				
-				if(result[i].authSq == 2){
+				if(result[i].workTpyCd == "WORK"){
  				html += '<div class="artist active"><span>Artist</span></div>';
  				}
- 				if(result[i].authSq == 1){
+ 				if(result[i].workTpyCd == "COLL"){
  				html += '<div class="artist"><span>Artist</span></div>';
  				}
 				html += '</div>';
@@ -586,10 +586,10 @@ function onload(sort, type){
 				
 				html += '</div>';
 				
-				if(result[i].authSq == 2){
+				if(result[i].workTpyCd == "WORK"){
  				html += '<div class="artist active"><span>Artist</span></div>';
  				}
- 				if(result[i].authSq == 1){
+ 				if(result[i].workTpyCd == "COLL"){
  				html += '<div class="artist"><span>Artist</span></div>';
  				}
 				html += '</div>';
