--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetailWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetailWork.html
@@ -284,10 +284,10 @@ $(function() {
 					
 					html += '</div>';
 					
-					if(result[i].authSq == 2){
+					if(result[i].workTpyCd == "WORK"){
 	 				html += '<div class="artist active"><span>Artist</span></div>';
 	     			}
-	     			if(result[i].authSq == 1){
+	     			if(result[i].workTpyCd == "COLL"){
 	     				html += '<div class="artist"><span>Artist</span></div>';
 	     			}
 					
@@ -333,10 +333,10 @@ $(function() {
 					
 					html += '</div>';
 					
-					if(result[i].authSq == 2){
+					if(result[i].workTypCd == "WORK"){
 	 				html += '<div class="artist active" onclick="dealDetail('+ result[i].workSq +')"><span>Artist</span></div>';
 	 				}
-	 				if(result[i].authSq == 1){
+	 				if(result[i].workTypCd == "COLL"){
 	 				html += '<div class="artist"><span>Artist</span></div>';
 	 				}
 	 				
@@ -377,10 +377,10 @@ $(function() {
 					html += '</div>'
 					html += '</div>';
 					
-					if(result[i].authSq == 2){
+					if(result[i].workTypCd == "WORK"){
 	 				html += '<div class="artist active"><span>Artist</span></div>';
 	 				}
-	 				if(result[i].authSq == 1){
+	 				if(result[i].workTypCd == "COLL"){
 	 				html += '<div class="artist"><span>Artist</span></div>';
 	 				}
 					html += '</div>';
@@ -419,10 +419,10 @@ $(function() {
 					
 					html += '</div>';
 					
-					if(result[i].authSq == 2){
+					if(result[i].workTypCd == "WORK"){
 	 				html += '<div class="artist active"><span>Artist</span></div>';
 	 				}
-	 				if(result[i].authSq == 1){
+	 				if(result[i].workTypCd == "COLL"){
 	 				html += '<div class="artist"><span>Artist</span></div>';
 	 				}
 					html += '</div>';
