--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -308,10 +308,10 @@ function myCollectionList(){
 				
 				
 				
-				if(result[i].authSq == 2){
+				if(result[i].workTypCd == "WORK"){
  				html += '<div class="artist active"><span>Artist</span></div>';
  			}
- 			if(result[i].authSq == 1){
+ 			if(result[i].workTypCd == "COLL"){
  				html += '<div class="artist"><span>Artist</span></div>';
  			}
 				
@@ -368,10 +368,10 @@ function myCollectionList(){
 				
 				html += '</div>';
 				
-				if(result[i].authSq == 2){
+				if(result[i].workTypCd == "WORK"){
  				html += '<div class="artist active"><span>Artist</span></div>';
  			}
- 			if(result[i].authSq == 1){
+ 			if(result[i].workTypCd == "COLL"){
  				html += '<div class="artist"><span>Artist</span></div>';
  			}
  		
@@ -414,10 +414,10 @@ function myCollectionList(){
 				
 				html += '</div>';
 				
-				if(result[i].authSq == 2){
+				if(result[i].workTypCd == "WORK"){
  				html += '<div class="artist active"><span>Artist</span></div>';
  			}
- 			if(result[i].authSq == 1){
+ 			if(result[i].workTypCd == "COLL"){
  				html += '<div class="artist"><span>Artist</span></div>';
  			}
 				
@@ -475,10 +475,10 @@ function myCollectionList(){
 				
 				html += '</div>';
 				
-				if(result[i].authSq == 2){
+				if(result[i].workTypCd == "WORK"){
  				html += '<div class="artist active"><span>Artist</span></div>';
  			}
- 			if(result[i].authSq == 1){
+ 			if(result[i].workTypCd == "COLL"){
  				html += '<div class="artist"><span>Artist</span></div>';
  			}
 				
