--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
@@ -247,10 +247,10 @@ function scrapList(){
 					
 					html += '</div>';
 					
-					if(dealList[i].authSq == 2){
+					if(dealList[i].workTypCd == "WORK"){
 	 				html += '<div class="artist active"><span>Artist</span></div>';
 	 				}
-	 				if(dealList[i].authSq == 1){
+	 				if(dealList[i].workTypCd == "WORK"){
 	 				html += '<div class="artist"><span>Artist</span></div>';
 	 				}
 					
@@ -296,10 +296,10 @@ function scrapList(){
 					
 					html += '</div>';
 					
-					if(dealList[i].authSq == 2){
+					if(dealList[i].workTypCd == "WORK"){
 	 				html += '<div class="artist active"><span>Artist</span></div>';
 	 				}
-	 				if(dealList[i].authSq == 1){
+	 				if(dealList[i].workTypCd == "WORK"){
 	 				html += '<div class="artist"><span>Artist</span></div>';
 	 				}
 					
@@ -343,10 +343,10 @@ function scrapList(){
 					
 					html += '</div>';
 					
-					if(dealList[i].authSq == 2){
+					if(dealList[i].workTypCd == "WORK"){
 	 				html += '<div class="artist active"><span>Artist</span></div>';
 	 			}
-	 			if(dealList[i].authSq == 1){
+	 			if(dealList[i].workTypCd == "WORK"){
 	 				html += '<div class="artist"><span>Artist</span></div>';
 	 			}
 					
@@ -386,10 +386,10 @@ function scrapList(){
 					
 					html += '</div>';
 					
-					if(dealList[i].authSq == 2){
+					if(dealList[i].workTypCd == "WORK"){
 	 				html += '<div class="artist active"><span>Artist</span></div>';
 	 				}
-	 				if(dealList[i].authSq == 1){
+	 				if(dealList[i].workTypCd == "WORK"){
 	 				html += '<div class="artist"><span>Artist</span></div>';
 	 				}
 					html += '</div>';
