--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -159,11 +159,12 @@
 							<div class="med-box radio-2">
 								<div id="bidOrSale2">
 									<input type="radio" id="t1" name="cc" checked>
-									<label for="t1" class="c-red" ><span></span>경매 시작가 <div class="mg_l30 di-b" id="dealStrtPrcA"></div></label>
-									<span class="to-red" style="font-size:12px;">판매 희망가의 70%로 자동 설정 됩니다.</span>
+									<label for="t1" class="c-red" ><span></span>경매 시작가</label>
+									<!-- <label for="t1" class="c-red" ><span></span>경매 시작가 <div class="mg_l30 di-b" id="dealStrtPrcA"></div></label> -->
+									<!-- <span class="to-red" style="font-size:12px;">판매 희망가의 70%로 자동 설정 됩니다.</span> -->
 								</div>
 								<div class="input-box">
-									<input type="text" class="input-1" id="dealStrtPrcA1" placeholder="경매 희망가를 입력해주세요" onkeyup="comma(this)" onblur="dealStrtPrcCal(this)" style="font-size:15px;"/>
+									<input type="text" class="input-1" id="dealStrtPrcA1" placeholder="경매 시작가를 입력해주세요" onkeyup="comma(this)" onblur="dealStrtPrcCal(this)" style="font-size:15px;"/>
 									<input type="text" class="input-1" id="dealStrtPrcS" placeholder="판매가를 입력해주세요" onkeyup="comma(this)" onblur="dealStrtPrcCal(this)" style="font-size:15px; display:none;"/>
 								</div>
 							</div>
@@ -1350,13 +1351,14 @@ function dealStrtPrcCal(obj){
 			if(n != 0 || obj.value == 0){
 				modalAlertShow("10,000원 단위로만 입력가능합니다.", obj.id);
 				obj.value = '';
-				$("#dealStrtPrcA").text("");
+				//$("#dealStrtPrcA").text("");
 			}else{
-				var val = Math.round(obj.value.replaceAll(",", "") * 0.7);
-				var val2 = val.toString().replaceAll(/\B(?=(\d{3})+(?!\d))/g, ",");
-				$("#dealStrtPrcA").text(val2+" KRW");
+				//var val = Math.round(obj.value.replaceAll(",", "") * 0.7);
+				//var val2 = val.toString().replaceAll(/\B(?=(\d{3})+(?!\d))/g, ",");
+				//$("#dealStrtPrcA").text(val2+" KRW");
+				obj.value = obj.value.replaceAll(/\B(?=(\d{3})+(?!\d))/g, ",");
 			}
-			obj.value = obj.value.replaceAll(/\B(?=(\d{3})+(?!\d))/g, ",");
+			
 		}
 	}else{
 		if(obj.value != null && obj.value != ""){
@@ -1366,7 +1368,7 @@ function dealStrtPrcCal(obj){
 			if(n != 0 || obj.value == 0){
 				modalAlertShow("10,000원 단위로만 입력가능합니다.", obj.id);
 				obj.value = '';
-				$("#dealStrtPrcA").text("");
+				//$("#dealStrtPrcA").text("");
 			}
 			obj.value = obj.value.replaceAll(/\B(?=(\d{3})+(?!\d))/g, ",");
 		}
@@ -1555,8 +1557,9 @@ function dealRegNotesModal(){
 	result.deal.mbrSq = sMbrSqVal;
 	//경매일때
 	if(result.deal.dealTypCd == "A"){
-		var dealStrtPrc = $("#dealStrtPrcA").text().replaceAll(" KRW", "");
-		result.deal.dealStrtPrc = dealStrtPrc.replaceAll(/,/g,'');
+		//var dealStrtPrc = $("#dealStrtPrcA").text().replaceAll(" KRW", "");
+		//result.deal.dealStrtPrc = dealStrtPrc.replaceAll(/,/g,'');
+		result.deal.dealStrtPrc = $("#dealStrtPrcA1").val().replaceAll(/,/g,'');
 	}else{
 		result.deal.dealFinalPrc = $("#dealStrtPrcS").val().replaceAll(/,/g,'');
 		result.deal.dealStrtPrc = $("#dealStrtPrcS").val().replaceAll(/,/g,'');
