판매기간 수정

--- a/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
@@ -139,11 +139,11 @@
 								<label for="w2"><span></span>시작 시간 선택</label>
 								
 								<ul class="med-ul" id="startDate" style="display:none;">
-									<li onclick="startDateSel(this)" value="7"><a href="javascript:void(0);" >1주</a></li>
+									<li onclick="startDateSel(this)" value="3"><a href="javascript:void(0);">3일</a></li>
+									<li onclick="startDateSel(this)" value="7"><a href="javascript:void(0);">1주</a></li>
 									<li onclick="startDateSel(this)" value="14"><a href="javascript:void(0);">2주</a></li>
 									<li onclick="startDateSel(this)" value="21"><a href="javascript:void(0);">3주</a></li>
-									<li onclick="startDateSel(this)" value="28"><a href="javascript:void(0);">4주</a></li>
-									<li onclick="startDateSel(this)" value="35"><a href="javascript:void(0);">5주</a></li>
+									<!-- <li onclick="startDateSel(this)" value="35"><a href="javascript:void(0);">5주</a></li> -->
 								</ul>
 								<div class="input-box" id="choiceDate">
 									<label style="margin: 0; padding: 0 10px 0 0px; display: inline-block; font-size: 14px; color: #333; vertical-align: middle;">기간선택</label>
