--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -210,7 +210,7 @@
 					</div>
 					<div class="iframe-box">
 						<h3>미술품 거래 왜 이렇게 복잡한가요? </h3>
-						<iframe width="100%" height="100%" src="https://www.youtube.com/embed/3amrd9Q1Cns" title="미술품 직거래 플랫폼 딜링아트 Dealing art" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe width="100%" height="100%" src="https://www.youtube.com/embed/3amrd9Q1Cns?rel=0" title="미술품 직거래 플랫폼 딜링아트 Dealing art" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 				<div class="da-box">
