--- a/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
@@ -238,7 +238,7 @@
 						</div>
 					<div id="auctionInfo">
 						<div class="med col_t85" style="padding:15px;">
-							<h2 class="">판매 등록 정보 <span class="c-gra">등록된 작품을 거래로 전환할 때 필요한 정보 입니다.</span></h2>
+							<h2 class="">판매 등록 정보 <span class="c-gra">등록된 작품을 판매로 전환할 때 필요한 정보 입니다.</span></h2>
 						</div>
 						<div class="myd-box">
 							<div class="myd-box-2">
