--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -406,7 +406,7 @@ function onload(sort, type){
 				
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 				html += '<div>';
-				html += '<div class="item-div-img active" onclick="dealDetail('+ result[i].workSq +')" style="cursor:pointer">';
+				html += '<div class="item-div-img active" onclick="dealDetail('+ result[i].dealSq +')" style="cursor:pointer">';
 				//작품 이미지
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;" >';
 				//마우스 호버 부분
@@ -467,7 +467,7 @@ function onload(sort, type){
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 				html += '<div>';
 				//작품 이미지
-				html += '<div class="item-div-img sale" onclick="dealDetail('+ result[i].workSq +')" style="cursor:pointer">';
+				html += '<div class="item-div-img sale" onclick="dealDetail('+ result[i].dealSq +')" style="cursor:pointer">';
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '		<div class="item-ho2 sale-div">';
      			html += '			<h3>판매중</h3>';
@@ -645,9 +645,13 @@ if(window.matchMedia('(min-width: 1537px)').matches) {
 		$(".grid").width( '1200px' );
  }
 
+//2022-08-26 박상현 주석처리
+// function dealDetail(workSq){
+//  	location.href="/bidding?workSq="+workSq;
+// } 
 
-function dealDetail(workSq){
- 	location.href="/bidding?workSq="+workSq;
+function dealDetail(dealSq){
+	location.href = "/bidding?dealSq="+dealSq;
 }
 
 function workDetail(workSq){
