--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -229,7 +229,8 @@ function myCollectionList(){
 				
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;" >';
 				html += '<div>';
-				html += '<div class="item-div-img active-on" onclick="biddingMove('+result[i].workSq+')" >';
+				//html += '<div class="item-div-img active-on" onclick="biddingMove('+result[i].workSq+')" >';
+				html += '<div class="item-div-img active-on" onclick="biddingMove('+result[i].dealSq+')" >';
 				//작품 이미지
 				html += '	<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				
@@ -328,7 +329,7 @@ function myCollectionList(){
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;" >';
 				html += '<div>';
 				//작품 이미지
-				html += '<div class="item-div-img sale-on" style="cursor:pointer" onclick="biddingMove('+result[i].workSq+')">';
+				html += '<div class="item-div-img sale-on" style="cursor:pointer" onclick="biddingMove('+result[i].dealSq+')">';
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '		<div class="item-ho2 sale-div">';
 	 			html += '			<h3>판매중</h3>';
@@ -628,14 +629,26 @@ $(document).on("click", ".heart", function(){
   	 	location.href="/workDetail?workSq="+workSq;
   	}
 
-
-  	function biddingMove(workSq) {
+//2022-08-26 주석처리 : 박상현
+//   	function biddingMoveTemp(workSq) {
+  		
+//   		pageGoPost({
+//   			url:"/bidding",
+//   			target:"_self",
+//   			vals:[
+//   				["workSq", workSq]
+//   			]
+//   		});
+  		
+//   	}
+  	
+	function biddingMove(dealSq) {
   		
   		pageGoPost({
   			url:"/bidding",
   			target:"_self",
   			vals:[
-  				["workSq", workSq]
+  				["dealSq", dealSq]
   			]
   		});
   		
