--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -1653,9 +1653,9 @@ function ibx_search_onkeyup(e){
 				
 				for(i=0; i<work.length; i++){
 					if(work[i].workProdcYear != null && work[i].workProdcYear != '') {
-						workHtml +=	'<li><a href="javascript:void(0);" class="work" sq="'+work[i].workSq+'" dealSttsCd="'+work[i].dealSttsCd+'">'+work[i].workNm+'('+work[i].workProdcYear+')'+' - '+work[i].artstActvtyNm+'</a></li>';
+						workHtml +=	'<li><a href="javascript:void(0);" class="work" dealSq="'+work[i].dealSq+'" sq="'+work[i].workSq+'" dealSttsCd="'+work[i].dealSttsCd+'">'+work[i].workNm+'('+work[i].workProdcYear+')'+' - '+work[i].artstActvtyNm+'</a></li>';
 					} else {
-						workHtml +=	'<li><a href="javascript:void(0);" class="work" sq="'+work[i].workSq+'" dealSttsCd="'+work[i].dealSttsCd+'">'+work[i].workNm+' - '+work[i].artstActvtyNm+'</a></li>';	
+						workHtml +=	'<li><a href="javascript:void(0);" class="work" dealSq="'+work[i].dealSq+'" sq="'+work[i].workSq+'" dealSttsCd="'+work[i].dealSttsCd+'">'+work[i].workNm+' - '+work[i].artstActvtyNm+'</a></li>';	
 					}
 					
 				}
@@ -1693,6 +1693,7 @@ function ibx_search_onkeyup(e){
      
 $(document).on("click",".work",function(){
 	var workSq= $(this).attr("sq");
+	var dealSq= $(this).attr("dealSq");
 	
 	console.log("workSq :"+workSq);
 	
@@ -1716,7 +1717,7 @@ $(document).on("click",".work",function(){
 			url:"/bidding",
 			target:"_self",
 			vals:[
-				["workSq", workSq]
+				["dealSq", dealSq]
 			]
 		}); 
 	}
