--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -212,7 +212,7 @@ function myWorkList(){
 				//작품 이미지
 				html += '	<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				
-				html += '		<div class="item-ho" style="cursor:pointer" onclick="biddingMove('+result[i].workSq+')">';
+				html += '		<div class="item-ho" style="cursor:pointer" onclick="biddingMove('+result[i].dealSq+')">';
 				html += '			<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
  				html += '			<p> 응찰수 : '+ result[i].bidCnt +'</p>';
  				html += '			<ul class="dealCount" dday="'+result[i].dealEndngDateTime+'"></ul>';
@@ -284,7 +284,7 @@ function myWorkList(){
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;" >';
 				html += '<div>';
 				//작품 이미지
-				html += '<div class="item-div-img sale-on" style="cursor:pointer" onclick="biddingMove('+result[i].workSq+')">';
+				html += '<div class="item-div-img sale-on" style="cursor:pointer" onclick="biddingMove('+result[i].dealSq+')">';
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '		<div class="item-ho2 sale-div">';
 	 			html += '			<h3>판매중</h3>';
@@ -583,7 +583,7 @@ $(document).on("click", ".heart", function(){
   	 	location.href="/workDetail?workSq="+workSq;
   	}
 
-
+	/*
 	function biddingMove(workSq) {
 		
 		pageGoPost({
@@ -595,7 +595,18 @@ $(document).on("click", ".heart", function(){
 		});
 		
 	}
-	
+	*/
+	function biddingMove(dealSq) {
+		
+		pageGoPost({
+			url:"/bidding",
+			target:"_self",
+			vals:[
+				["dealSq", dealSq]
+			]
+		});
+		
+	}
 	
 	//작품수정
   	function myWorkMod(workSq){
