--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
@@ -201,7 +201,7 @@ function scrapList(){
 					
 					html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 					html += '<div>';
-					html += '<div class="item-div-img active" onclick="workDetail('+ dealList[i].workSq +')">'
+					html += '<div class="item-div-img active" onclick="dealDetail('+ dealList[i].dealSq +')">'
 					//작품 이미지
 					html += '	<img src="'+ dealList[i].workMainImgUrl +'" class="pseudo-img" width="360px;"  style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 					
@@ -266,7 +266,7 @@ function scrapList(){
 					html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 					html += '<div>';
 					//작품 이미지
-					html += '<div class="item-div-img sale" onclick="workDetail('+ dealList[i].workSq +')">';
+					html += '<div class="item-div-img sale" onclick="dealDetail('+ dealList[i].dealSq +')">';
 					html += '<img src="'+ dealList[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 					html += '<div class="item-ho2 sale-div">';
 	 				html += '<h3>판매중</h3>';
@@ -540,8 +540,8 @@ $(document).on("click", ".heart", function(){
 });
  
  
- function workDetail(workSq){
-		window.location.href = "/bidding?workSq="+workSq;
+ function dealDetail(dealSq){
+		window.location.href = "/bidding?dealSq="+dealSq;
 	}
       
 </script>
