--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -212,7 +212,7 @@ function myWorkList(){
 				//작품 이미지
 				html += '	<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				
-				html += '		<div class="item-ho" style="cursor:pointer" onclick="biddingMove('+result[i].workSq+')">';
+				html += '		<div class="item-ho" style="cursor:pointer" onclick="biddingMove('+result[i].dealSq+')">';
 				html += '			<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
  				html += '			<p> 응찰수 : '+ result[i].bidCnt +'</p>';
  				html += '			<ul class="dealCount" dday="'+result[i].dealEndngDateTime+'"></ul>';
@@ -284,7 +284,7 @@ function myWorkList(){
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;" >';
 				html += '<div>';
 				//작품 이미지
-				html += '<div class="item-div-img sale-on" style="cursor:pointer" onclick="biddingMove('+result[i].workSq+')">';
+				html += '<div class="item-div-img sale-on" style="cursor:pointer" onclick="biddingMove('+result[i].dealSq+')">';
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '		<div class="item-ho2 sale-div">';
 	 			html += '			<h3>판매중</h3>';
@@ -584,13 +584,13 @@ $(document).on("click", ".heart", function(){
   	}
 
 
-	function biddingMove(workSq) {
+	function biddingMove(dealSq) {
 		
 		pageGoPost({
 			url:"/bidding",
 			target:"_self",
 			vals:[
-				["workSq", workSq]
+				["dealSq", dealSq]
 			]
 		});
 		
