작사 생년월일  / 사망년도 수정

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -580,7 +580,7 @@ function artistLibraryList(){
         		//대가작가
         		if(masterArtist.length > 0){
 	        		for(var i=0; i<masterArtist.length; i++){
-	        			masterArtistHtml += '<div class="swiper-slide" style="cursor:pointer;" artstSq="'+ masterArtist[i].artstSq +'" artistBirthYear="'+masterArtist[i].artistBirthYear+'">';
+	        			masterArtistHtml += '<div class="swiper-slide" style="cursor:pointer;" artstSq="'+ masterArtist[i].artstSq +'" >';
 		        		masterArtistHtml += '	<a class="hd-div3">';
 		        		if(masterArtist[i].artstWorkImgUrl != null && masterArtist[i].artstWorkImgUrl != ""){
 		        			masterArtistHtml += '		<div class="hd-bg3"><img src="'+ masterArtist[i].artstWorkImgUrl +'" /></div>';
