콘텐츠 상세 모달에 URL 부여 또는 페이지화

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -615,19 +615,19 @@ function artistLibraryList(){
       
 $(document).on("click", ".swiper-slide", function(){
 	var artstSq= $(this).attr("artstSq");
-	var artistBirthYear= $(this).attr("artistBirthYear");
+	
     
-	//location.href = "/artistDetail?artstSq="+artstSq;
+	location.href = "/artistDetail?artstSq="+artstSq;
 	
 	
-	pageGoPost({
+	/* pageGoPost({
 		url:"/artistDetail",
 		target:"_self",
 		vals:[
 			["artstSq", artstSq],
 			["artistBirthYear", artistBirthYear]
 		]
-	});
+	}); */
     
 });
       
